# dibbler

./: .envrc  .gitignore  ALTER  README.MD  README.md  README.txt  barcode_helpers.py  conf.py  data  db.py  default.dibblerlog  default.nix  example-config.ini  example-config.toml  flake.nix  helpers.py  makedb.py  migration-2017-02-04.sql  mock_data.json  printer_helpers.py  pyproject.toml  requirements.txt  slabbedasker.py  statistikk.py  statistikkHelpers.py  test.py  text_based.py  ui.py  write_logfile.py
.gitea/workflows/: benchmark.yaml  test.yaml
SQLAlchemy.egg-info/: PKG-INFO  SOURCES.txt
dibbler/: cli.py  conf.py  db.py  helpers.py  main.py  makedb.py  printer_helpers.py  statistikkHelpers.py  text_based.py
dibbler/lib/: barcode_helpers.py  check_db_health.py  helpers.py  printer_helpers.py  query_helpers.py  render_transaction_log.py  render_tree.py  statistikkHelpers.py
dibbler/menus/: __init__.py  addstock.py  buymenu.py  editing.py  faq.py  helpermenus.py  main.py  mainmenu.py  miscmenus.py  printermenu.py  stats.py
dibbler/models/: Base.py  InterestRate.py  LastCacheTransaction.py  Product.py  ProductCache.py  ProductPriceCache.py  Purchase.py  PurchaseEntry.py  Transaction.py  TransactionType.py  User.py  UserBalanceCache.py  UserCache.py  UserProducts.py  __init__.py  db.py
dibbler/queries/: __init__.py  add_product.py  add_user.py  adjust_balance.py  adjust_interest.py  adjust_penalty.py  adjust_stock.py  affected_products.py  affected_users.py  buy_product.py  create_product.py  create_user.py  current_interest.py  current_penalty.py  joint_buy_product.py  product_owners.py  product_price.py  product_stock.py  products_owned_by_user.py  query_helpers.py  search_product.py  search_user.py  throw_product.py  transaction_log.py  transfer.py  update_cache.py  user_balance.py  user_products.py  user_transactions.py  users_owning_product.py
dibbler/scripts/: slabbedasker.py  statistikk.py
dibbler/subcommands/: loop.py  makedb.py  seed_test_data.py  slabbedasker.py  statistikk.py  transaction_log.py
docs/: economics.md
nix/: dibbler.nix  module.nix  package.nix  shell.nix  skrott.nix
nix/nixos-configurations/: vm-non-kiosk.nix  vm.nix
special_barcodes/: barcode.tex  userbarcodes.tex
special_barcodes/userimages/: alfkjempestor.eps  almelid.eps  oysteini.eps  tirilane.eps
tests/: conftest.py  helpers.py  test_product.py  test_transaction.py  test_user.py
tests/benchmark/: benchmark_settings.py  helpers.py  test_benchmark_product_owners.py  test_benchmark_product_price.py  test_benchmark_product_stock.py  test_benchmark_transaction_log.py  test_benchmark_user_balance.py
tests/models/: test_product.py  test_transaction.py  test_user.py
tests/queries/: test_adjust_interest.py  test_adjust_penalty.py  test_affected_products.py  test_affected_users.py  test_buy_product.py  test_current_interest.py  test_current_penalty.py  test_joint_buy_product.py  test_product_owners.py  test_product_price.py  test_product_stock.py  test_search_product.py  test_search_user.py  test_transaction_log.py  test_transfer_balance.py  test_update_cache.py  test_user_balance.py  test_user_transactions.py
text_interface/: addstock.py  buymenu.py  editing.py  faq.py  helpermenus.py  mainmenu.py  miscmenus.py  printermenu.py  stats.py
