[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dibbler"
version = "1.0.0"
authors = [
  { name = "Programvareverkstedet", email = "projects@pvv.ntnu.no" }
]
description = "EDB-system for PVV"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "SQLAlchemy >= 2.0, <2.1",
    "brother-ql",
    "matplotlib",
    "psycopg2-binary >= 2.8, <2.10",
    "python-barcode",
]

[tool.setuptools.packages.find]
include = ["dibbler*"]

[project.scripts]
dibbler = "dibbler.main:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
