[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dibbler"
version = "1.0.0"
authors = [
  { name = "Programvareverkstedet", email = "projects@pvv.ntnu.no" }
]
description = "EDB-system for PVV"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "SQLAlchemy >= 2.0, <2.1",
    # "brother-ql",
    # "matplotlib",
    "psycopg2-binary >= 2.8, <2.10",
    # "python-barcode",
]

[tool.setuptools.packages.find]
include = ["dibbler*"]

[project.scripts]
dibbler = "dibbler.main:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "ANN",
    # "E", # pycodestyle
    # "F", # Pyflakes
    "FA", # flake8-future-annotations
    "I", # isort
    "S", # flake8-bandit
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    # "N", # pep8-naming
    "PTH", # flake8-use-pathlib
    # "RET", # flake8-return
    # "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "UP", # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
  "E501", # line too long
  "S101", # assert detected
  "S311", # non-cryptographic random generator
]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
ignore-fully-untyped = true
